syntax = "proto3";
package graph;

option go_package = "pipegraph/graph";

import "job/config.proto";

enum NodeState {
    Waiting = 0;
    Running = 1;
    Finished = 2;
    Failed = 3;
    Stopped = 4;
}

message Config {
    repeated NodeConfig Nodes = 1;
    repeated EdgeConfig Edges = 2;
}

message NodeConfig {
    optional uint64 Id = 1;
    optional string Name = 2;
    optional job.Config Job = 3;
}

message EdgeConfig {
    optional uint64 FromNodeId = 1;
    optional uint64 ToNodeId = 2;
}
